--- a/src/App.css
+++ b/src/App.css
@@ -1,30 +1,53 @@
-
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
 
+body {
+    background: #eeeeee; 
+}
+
 .Home-Main {
     display: flex;
     align-items: center;
-    /* justify-content: space-between; */
     flex-wrap: wrap;
     margin: 2em;
+    margin-left: 5em;
+    margin-right: 5em;
+    /* max-width: 1000px; */
+    background: #0092ca; 
+    /* background: #393e46;  */
+    padding: 2em;
+    border: solid #222831 0.5em;
 }
 
-.Profile-Pic{
+/* .column {
+    border: 1px solid #ddd; 
+    padding: 10px;
+} */
+
+.Profile-Pic {
     width: 25%;
     /* margin: 0.5em; */
+    background-color: #222831;
+    box-shadow: 4px 4px 1px 2px #eeeeee;
+    border-radius: 2em;
 }
 
-.Profile-Pic img{
+.Profile-Pic img {
     width: 100%;
+    border-radius: 7em;
 }
 
-.Basic-Info{
+.Basic-Info {
     width: 65%;
-    padding-left: 5%;
+    padding: 1em;
+    margin-left: 5%;
+    background-color: #222831;
+    color: white;
+    box-shadow: 4px 4px 1px 2px #eeeeee;
+    border-radius: 2em;
 }
 
 .Basic-Info ul {
@@ -35,7 +58,28 @@
     padding-bottom: 0.5em;
 }
 
-.Paragraph{
+.Paragraph {
     margin-top: 1.5em;
     margin-bottom: 1em;
+    padding: 1em;
+    background-color: #222831;
+    color: white;
+    box-shadow: 4px 4px 1px 2px #eeeeee;
+    border-radius: 2em;
+}
+
+@media (max-width: 768px) {
+    .Home-Main {
+        display: flex;
+        align-items: center;
+        flex-wrap: wrap;
+        margin: 0.5em;
+        margin-left: 0.5em;
+        margin-right: 0.5em;
+        /* max-width: 1000px; */
+        background: #0092ca; 
+        /* background: #393e46;  */
+        padding: 2em;
+        border: solid #222831 0.5em;
+    }
 }
