--- a/src/AddingStyle/Education.css
+++ b/src/AddingStyle/Education.css
@@ -2,7 +2,7 @@
 .div {
     margin: 1em;
     padding: 1em;
-    width: 65%;
+    width: 55%;
     background-color: #222831;
     color: white;
     box-shadow: 4px 4px 1px 2px #eeeeee;
@@ -11,10 +11,15 @@
 
 .pic{
     margin: 1em;
-    padding: 5em;
-    width: 25%;
+    padding: 0.9em;
+    width: 35%;
     /* margin: 0.5em; */
     background-color: #222831;
     box-shadow: 4px 4px 1px 2px #eeeeee;
     border-radius: 2em;
+}
+
+.img {
+    width: 100%;
+    height: auto;
 }
