--- a/src/AddingStyle/Projects.css
+++ b/src/AddingStyle/Projects.css
@@ -15,3 +15,12 @@ ul {
 .Paragraph h3 a:hover {
     text-decoration: underline;
 }
+
+.links h4 a {
+    text-decoration: none;
+    color: #0092ca;
+}
+
+.links h4 a:hover {
+    text-decoration: underline;
+}
