--- a/src/AddingStyle/Project-Error.css
+++ b/src/AddingStyle/Project-Error.css
@@ -9,7 +9,10 @@
     /* max-width: 1000px; */
     background: #0092ca; 
     /* background: #393e46;  */
-    padding: 2em;
+    padding-left: 8em;
+    padding-right: 8em;
+    padding-top: 4em;
+    padding-bottom: 4em;
     border: solid #222831 0.5em;
 }
 
@@ -27,7 +30,8 @@
     color: white;
     box-shadow: 4px 4px 1px 2px #eeeeee;
     border-radius: 2em;
-    
+    width: 100%;
+    /* text-align: center; */
 }
 
 .ErrorPageInside{
